--- a/index.html
+++ b/index.html
@@ -9,13 +9,38 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styel.css">
     <title>Assignment 1</title>
 </head>
 
 <body class="open-sans-normal">
-    <header></header>
-    <main></main>
+    <header class="header">
+        <nav>
+            <h3 class="nav-title open-sans-inter">LOGO</h3>
+            <button class="btn-primary"><a class="button-link" href="#">Sign Up</a></button>
+        </nav>
+        <div class="banner">
+            <h1>Cool Dark UI Template for Webflow Agencies!</h1>
+            <button class="btn-primary"><a class="button-link" href="#">Stay Focused</a></button>
+        </div>
+    </header>
+    <main>
+        <section class="Action-Section">
+            <div class="action">
+                <div class="section-title">
+                    <h2>See It in Action</h2>
+                    <p>Explore the live preview and imagine your <br> brand in this bold new look.</p>
+                    <button class="btn-primary"><a class="button-link" href="#">Launch Live Preview</a></button>
+                </div>
+                <img src="Assets/wc-mini.png" alt="">
+            </div>
+        </section>
+    </main>
     <footer></footer>
 
 
