productive usersection complete

--- a/index.html
+++ b/index.html
@@ -34,12 +34,34 @@
             <div class="action">
                 <div class="section-title">
                     <h2>See It in Action</h2>
-                    <p>Explore the live preview and imagine your <br> brand in this bold new look.</p>
+                    <p>Explore the live preview and imagine your  brand in this bold new look.</p>
                     <button class="btn-primary"><a class="button-link" href="#">Launch Live Preview</a></button>
                 </div>
                 <img src="Assets/wc-mini.png" alt="">
             </div>
         </section>
+<section class="Productive-Users-Section">
+    <div class="section-title-pro">
+        <h1>Joined Thousands of Productive Users</h1>
+        <div class="follwer-s">
+            <div class="followers">
+            <h1>50K</h1>
+            <p>Active Users</p>
+        </div>
+        <div class="followers">
+            <h1>2M</h1>
+            <p>Focus Sessions</p>
+        </div>
+        <div class="followers">
+            <h1>95%</h1>
+            <p>Satisfaction Rate</p>
+        </div>
+        </div>
+    </div>
+</section>
+
+        
+
     </main>
     <footer></footer>
 
