--- a/index.html
+++ b/index.html
@@ -34,33 +34,95 @@
             <div class="action">
                 <div class="section-title">
                     <h2>See It in Action</h2>
-                    <p>Explore the live preview and imagine your  brand in this bold new look.</p>
+                    <p>Explore the live preview and imagine your brand in this bold new look.</p>
                     <button class="btn-primary"><a class="button-link" href="#">Launch Live Preview</a></button>
                 </div>
                 <img src="Assets/wc-mini.png" alt="">
             </div>
         </section>
-<section class="Productive-Users-Section">
-    <div class="section-title-pro">
-        <h1>Joined Thousands of Productive Users</h1>
-        <div class="follwer-s">
-            <div class="followers">
-            <h1>50K</h1>
-            <p>Active Users</p>
-        </div>
-        <div class="followers">
-            <h1>2M</h1>
-            <p>Focus Sessions</p>
-        </div>
-        <div class="followers">
-            <h1>95%</h1>
-            <p>Satisfaction Rate</p>
-        </div>
-        </div>
-    </div>
-</section>
+        <section class="Productive-Users-Section">
+            <div class="section-title-pro">
+                <h1>Joined Thousands of Productive Users</h1>
+                <div class="follwer-s">
+                    <div class="followers">
+                        <h1>50K</h1>
+                        <p>Active Users</p>
+                    </div>
+                    <div class="followers">
+                        <h1>2M</h1>
+                        <p>Focus Sessions</p>
+                    </div>
+                    <div class="followers">
+                        <h1>95%</h1>
+                        <p>Satisfaction Rate</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="challenges_section">
+            <h1>What our users say</h1>
+            <div class="cards">
 
-        
+
+                <div class="card">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <h5>Loved by Designers</h5>
+                    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="all">
+                        <img src="Assets/avatar.png" alt="">
+                        <div class="all-p">
+                            <h6>Reviewer name</h6>
+
+                        </div>
+                    </div>
+                    <p style="padding-left: 40px; ">Date</p>
+                </div>
+                <div class="card">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <h5>Loved by Designers</h5>
+                    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="all">
+                        <img src="Assets/avatar.png" alt="">
+                        <div class="all-p">
+                            <h6>Reviewer name</h6>
+
+                        </div>
+
+
+                    </div>
+                    <p style="padding: 40px; ">Date</p>
+                </div>
+                <div class="card">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <h5>Loved by Designers</h5>
+                    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="all">
+                        <img src="Assets/avatar.png" alt="">
+                        <div class="all-p">
+                            <h6>Reviewer name</h6>
+
+                        </div>
+
+
+                    </div>
+                    <p style="padding: 40px; ">Date</p>
+                </div>
+            </div>
+        </section>
+
+
 
     </main>
     <footer></footer>
