--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
             </div>
         </section>
 
+        <section class="Focus">
+            <h1>Ready to focus better</h1>
+            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+            <button class="btn-primary"><a class="button-link" href="">Ger Started Free</a></button>
+            <p></p>
+            <img src="Assets/wc-big.png" alt="">
+        </section>
+
 
 
     </main>
