--- a/index.html
+++ b/index.html
@@ -130,10 +130,41 @@
             <img src="Assets/wc-big.png" alt="">
         </section>
 
+        <section class="feadback">
+            <div class="colom">
+                <div class="feadback-titile">
+                <h1>Let’s Get in Touch</h1>
+            </div>
+            <div class="feadbackinput">
+                <form action="">
+                    <label for="Your_email">Email</label>
+                    <input type="email" id="Your_email" placeholder="example@email.com">
+                    <label for="your_name">Name</label>
+                    <input type="text" id="your_name" placeholder="full name">
+                    <label for="your_feadback">Message</label>
+                    <textarea name="your_feadback" placeholder="write your message...." id=""></textarea>
+                    <button class="btn-primary extra"><a class="button-link" href="">Get in Touch</a></button>
+                </form>
+
+            </div>
+            </div>
+        </section>
+
 
 
     </main>
-    <footer></footer>
+    <footer>
+        <div class="f">
+            <h1 class="open-sans-inter">LOGO</h1>
+            <p>Ready to elevate your online presence? <br> Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">How it Works</a></li>
+                <li><a href="">Services</a></li>
+            </ul>
+        </div>
+    </footer>
 
 
 </body>
